--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,45 @@
 .App {
-  text-align: center;
+  width: 100%;
+  padding: 20px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.clocks-wrapper {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.clock-box {
+  display: flex;
+  margin-right: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.clock-box button {
+  width: 30px;
+  height: 30px;
+
+  border: none;
+}
+
+form {
+  display: flex;
+  justify-content: space-around;
+  padding: 50px 0;
+}
+
+input {
+  outline: none;
+  margin-right: 20px;
+}
+
+button {
+  background-color: transparent;
+}
+
+input, button {
+  padding: 10px 20px;
+  border: 1px solid #333;
+  border-radius: 5px;
+}
+
+.hint-wrapper {
+  text-align: center;
 }
